[package]
name = "asn1_suite"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
        "crates/basicaccesscontrol",
        "crates/chat",
        "crates/dstu",
        "crates/kep",
        "crates/ldap",
        "crates/pkcs10",
        "crates/pkix1explicit2009",
        "crates/pkix1explicit88",
        "crates/pkix1implicit2009",
        "crates/pkixcmp2009",
        "crates/pkixcommontypes2009",
        "crates/pkixcrmf2009",
        "crates/upperbounds",
        "crates/x500"
]

[dependencies]
rust-asn1 = { git = "https://github.com/iho/rust-asn1.git" }
basicaccesscontrol = { path = "crates/basicaccesscontrol" }
chat = { path = "crates/chat" }
dstu = { path = "crates/dstu" }
kep = { path = "crates/kep" }
ldap = { path = "crates/ldap" }
pkcs10 = { path = "crates/pkcs10" }
pkix1explicit2009 = { path = "crates/pkix1explicit2009" }
pkix1explicit88 = { path = "crates/pkix1explicit88" }
pkix1implicit2009 = { path = "crates/pkix1implicit2009" }
pkixcmp2009 = { path = "crates/pkixcmp2009" }
pkixcommontypes2009 = { path = "crates/pkixcommontypes2009" }
pkixcrmf2009 = { path = "crates/pkixcrmf2009" }
upperbounds = { path = "crates/upperbounds" }
x500 = { path = "crates/x500" }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
